# mongo-odbc-driver

./: Cargo.toml
connectivity_tester/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  OPTIONS_CHECKLIST.md  QUICK_START.md  README.md  SUMMARY.md  X509_FIX.md
connectivity_tester/src/: main.rs
core/src/: collections.rs  json_schema.rs  query.rs
odbc/src/api/: data.rs  functions.rs
resources/: run_adf.sh  run_latest_mongosql_with_adf.sh
