[package]
name = "connectivity_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
mongo-odbc-core = { path = "../core" }
constants = { path = "../constants" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

